# internal/controller/userController.go
@@ -45,7 +45,7 @@ func (uc *UserController) ListUsers(w http.ResponseWriter, r *http.Request) {
 
 	if err != nil {
 		log.Error.Println(err)
-		utils.ResponseCustomError(w, http.StatusNotFound, err.Error())
+		utils.ResponseMessageErr(w, err)
 		return
 	}
 
@@ -56,7 +56,7 @@ func (uc *UserController) ListUsers(w http.ResponseWriter, r *http.Request) {
 //
 // This will handle GET requests for retrieving a user by ID.
 //
-// swagger:route GET /users/{userId} getUser
+// swagger:route GET /users/{user_id} getUser
 //
 // Consumes:
 // - application/json
@@ -72,14 +72,18 @@ func (uc *UserController) ListUsers(w http.ResponseWriter, r *http.Request) {
 //	500: MessageErr
 func (uc *UserController) GetUser(w http.ResponseWriter, r *http.Request) {
 
-	userId := chi.URLParam(r, "userId")
-	id, _ := strconv.Atoi(userId)
-
-	user, err := uc.UserService.GetUser(int64(id))
-
+	id, err := getUserId(chi.URLParam(r, "user_id"))
 	if err != nil {
-		log.Error.Println(err)
-		utils.ResponseCustomError(w, err.Status(), err.Error())
+		utils.ResponseMessageErr(w, err)
+		return
+	}
+
+	user, errApi := uc.UserService.GetUser(id)
+
+	if errApi != nil {
+		log.Error.Println(errApi)
+		utils.ResponseMessageErr(w, errApi)
+		return
 	}
 
 	utils.ResponseJson(w, http.StatusOK, user)
@@ -109,7 +113,7 @@ func (uc *UserController) SaveUser(w http.ResponseWriter, r *http.Request) {
 	var body model.User
 	if err := utils.ParseJson(r, &body); err != nil {
 		log.Error.Println(err)
-		utils.ResponseError(w, http.StatusBadRequest)
+		utils.ResponseMessageErr(w, utils.BadRequestError(err.Error()))
 		return
 	}
 
@@ -118,7 +122,7 @@ func (uc *UserController) SaveUser(w http.ResponseWriter, r *http.Request) {
 
 	if err != nil {
 		log.Error.Println(err)
-		utils.ResponseCustomError(w, err.Status(), err.Message())
+		utils.ResponseMessageErr(w, err)
 		return
 	}
 
@@ -132,7 +136,7 @@ func (uc *UserController) SaveUser(w http.ResponseWriter, r *http.Request) {
 //
 // This will Update a user.
 //
-// swagger:route PUT /users/{userId} updateUser
+// swagger:route PUT /users/{user_id} updateUser
 //
 // Consumes:
 // - application/json
@@ -152,7 +156,7 @@ func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	var body model.User
 	if err := utils.ParseJson(r, &body); err != nil {
 		log.Error.Println(err)
-		utils.ResponseCustomError(w, http.StatusBadRequest, err.Error())
+		utils.ResponseMessageErr(w, utils.BadRequestError(err.Error()))
 		return
 	}
 
@@ -162,7 +166,7 @@ func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 
 	if err != nil {
 		log.Error.Println(err)
-		utils.ResponseCustomError(w, err.Status(), err.Message())
+		utils.ResponseMessageErr(w, err)
 		return
 	}
 
@@ -176,7 +180,7 @@ func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 //
 // This will delete a user.
 //
-// swagger:route DELETE /users/{userId} deleteUser
+// swagger:route DELETE /users/{user_id} deleteUser
 //
 // Consumes:
 // - application/json
@@ -192,26 +196,40 @@ func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 //	500: MessageErr
 func (uc *UserController) DeleteUser(w http.ResponseWriter, r *http.Request) {
 
-	userId := chi.URLParam(r, "userId")
-	id, _ := strconv.Atoi(userId)
-
-	err := uc.UserService.DeleteUser(int64(id))
-
+	id, err := getUserId(chi.URLParam(r, "user_id"))
 	if err != nil {
-		log.Error.Println(err)
-		utils.ResponseCustomError(w, err.Status(), err.Message())
+		//utils.ResponseCustomError(w, err.Status(), err.Message())
+		utils.ResponseMessageErr(w, err)
+		return
 	}
 
-	log.Info.Print("User deleted with id : ", userId)
+	errApi := uc.UserService.DeleteUser(id)
+
+	if errApi != nil {
+		log.Error.Println(errApi)
+		//utils.ResponseCustomError(w, errApi.Status(), errApi.Message())
+		utils.ResponseMessageErr(w, errApi)
+		return
+	}
+
+	log.Info.Print("User deleted with id : ", id)
 
 	utils.ResponseJson(w, http.StatusOK, map[string]string{"status": "deleted"})
 
 }
 
+func getUserId(userIdParam string) (int64, utils.MessageErr) {
+	msgId, msgErr := strconv.ParseInt(userIdParam, 10, 64)
+	if msgErr != nil {
+		return 0, utils.BadRequestError("user id should be a number")
+	}
+	return msgId, nil
+}
+
 // swagger:parameters getUser deleteUser updateUser
 type UserPathParam struct {
 	// in: path
-	UserId string `json:"userId"`
+	UserId string `json:"user_id"`
 }
 
 // swagger:parameters updateUser saveUser
